# TVA-Protocol

./: .env.example  .gitignore  Dockerfile.solang  PROJECT_VALIDATION_CHECKLIST.md  README.md  TVA-PIVOT-ARCHITECTURE.md  duo.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tva
agent/: SOLANG_STELLAR_REFERENCE.md  core-idea.md  interfaces.md  plan.md  tasks-agnij.md  tasks-arko.md
client/: next.config.ts  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
contracts/: ARKO_INTEGRATION_GUIDE.md  AccountRegistry.sol  COMPILATION_NOTES.md  Counter.sol  ExecutionCore.sol  GOLDEN_TEST_VECTORS.md  Greeter.sol  IMPLEMENTATION_STATUS.md  PHASE3_PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  POM_EXAMPLES.md  SubnetFactory.sol  TVAToken.sol  WITHDRAWAL_QUEUE_FORMAT.md
contracts/.processed/: AccountRegistry.sol  Counter.sol
contracts/deploy/: DEPLOYMENT.md  ExecutionCore.sol  ExecutionLedger.sol  SubnetFactory.sol  TVACounter.sol  (+1 more)
dev-b/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: README.md  architecture.md  developer-guide.md  rpc-layer.md  solang-compiler.md  stellar-integration.md
rpc/: .env.example  Cargo.toml
rpc/src/: config.rs  lib.rs  main.rs  server.rs
rpc/src/emulator/: block.rs  logs.rs  mod.rs
rpc/src/methods/: eth.rs  mod.rs  net.rs  web3.rs
rpc/src/stellar/: client.rs  mod.rs  types.rs
rpc/src/translator/: abi.rs  mod.rs  receipt.rs  scval.rs  tx.rs
scripts/: TESTING.md  compile.sh  demo-contracts.env  deploy.sh  last-deployment.env  setup-testnet.sh  test-e2e.sh
tooling/: Dockerfile.solang-build  build_solang.sh
tooling/msg-sender-shim/: Cargo.toml
tooling/msg-sender-shim/src/: main.rs  transform.rs
tooling/msg-sender-shim/tests/: integration_test.rs
(+69 files in other folders)
